get_filename_component(EXERCISENAME ${CMAKE_CURRENT_LIST_DIR} NAME)
file(GLOB_RECURSE SOURCES "*.cpp")
file(GLOB_RECURSE HEADERS "*.h")
file(GLOB_RECURSE SHADERS "*.glsl")

set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")

add_executable(${EXERCISENAME} ${SOURCES} ${HEADERS} ${SHADERS})
target_link_libraries(${EXERCISENAME} ${COMMON_LIBS})
#set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR})

#--- See meshes in project
file(GLOB_RECURSE MESHES "*.obj")
add_custom_target(dummy_meshes SOURCES ${MESHES})

#Mesh files import
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/mesh/armadillo.obj DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/mesh/bunny.obj DESTINATION ${CMAKE_CURRENT_BINARY_DIR})


# Skybox imports
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/textures/miramar_bk.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/textures/miramar_dn.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/textures/miramar_ft.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/textures/miramar_lf.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/textures/miramar_rt.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/textures/miramar_up.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/textures/cloud.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})


# texture imports
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/textures/head.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/textures/body.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/textures/leg.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

#glsl imports
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/skybox_vshader.glsl DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/skybox_fshader.glsl DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/Mesh_vshader.glsl DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/Mesh3D/Mesh_fshader.glsl DESTINATION ${CMAKE_CURRENT_BINARY_DIR})